objects/Client_Intake_Process_History__c.object
<CustomObject>
    <fields>
        <fullName>SFDC_Legacy_OGNID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy OGNID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_Opportunity_ID_for_Conga__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy Opportunity ID for Conga</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_MB_Last_Modified_by__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SME MB Last Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_MB_Strings_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SME MB Strings Value</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_SP_Last_Modified_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SME SP Last Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_SP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SME SP Strings Value</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Situs_State_Lookup__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Situs State Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source System</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_change_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status change date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Student_Max_Age_Limit_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Student Max Age Limit Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Max_Age_Limit__c</fullName>
        <label>Student Max Age Limit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subject_to_ERISA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subject to ERISA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Platform__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>System Platform</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UWR_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UWR No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UWR_Yes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has UWR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UWR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UWR #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>VP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiting_Period_for_New_Hires__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiting Period for New Hires?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Was_Discovery_Call_Held__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Was Discovery Call Held</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_Claims_be_referred_to_NCN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Will Claims be referred to NCN?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Members_Affected__c</fullName>
        <label># of Members Affected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CIP History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Intake Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIP History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>